--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.0",
+		"php": "~5.6.0 || ~7.0",
 		"nette/application": "^2.2",
 		"nette/forms": "^2.2",
-		"nette/utils": "^2.2"
+		"nette/utils": "~2.4 || ~3.0"
 	},
 	"autoload": {
 		"psr-0": {
