--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"nette/robot-loader": "~2.4.0 || ~3.0.0",
 		"nette/bootstrap": "~2.4.0 || ~3.0.0",
 		"tracy/tracy": "~2.4.0 || ~3.0.0",
-		"nette/tester": "~2.0.0"
+		"nette/tester": "~2.0.0",
+		"latte/latte": "~2.4.0 || ~3.0.0"
 	},
 	"autoload": {
 		"psr-0": {
