--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,6 @@
 		"latte/latte": "~2.4.0 || ~3.0.0"
 	},
 	"autoload": {
-		"psr-0": {
-			"NasExt\\Forms\\": "src/"
-		}
+		"classmap": ["src/"]
 	}
 }
