--- a/composer.json
+++ b/composer.json
@@ -18,18 +18,18 @@
 	],
 	"require": {
 		"php": "~5.6.0 || ^7.0",
-		"nette/application": "^2.4 || ~3.0.0",
-		"nette/forms": "^2.4 || ~3.0.0",
-		"nette/utils": "^2.4 || ~3.0.0"
+		"nette/application": "^2.4 || ^3.0.0",
+		"nette/forms": "^2.4 || ^3.0.0",
+		"nette/utils": "^2.4 || ^3.0.0"
 	},
 	"require-dev": {
-		"nette/di": "^2.4.6 || ~3.0.0",
-		"nette/robot-loader": "^2.4 || ~3.0.0",
-		"nette/bootstrap": "^2.4 || ~3.0.0",
-		"nette/http": "^2.4 || ~3.0.0",
-		"tracy/tracy": "^2.4 || ~3.0.0",
+		"nette/di": "^2.4.6 || ^3.0.0",
+		"nette/robot-loader": "^2.4 || ^3.0.0",
+		"nette/bootstrap": "^2.4 || ^3.0.0",
+		"nette/http": "^2.4 || ^3.0.0",
+		"tracy/tracy": "^2.4 || ^3.0.0",
 		"nette/tester": "^2.0",
-		"latte/latte": "^2.4 || ~3.0.0"
+		"latte/latte": "^2.4 || ^3.0.0"
 	},
 	"autoload": {
 		"classmap": ["src/"]
