--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
 	],
 	"require": {
 		"php": "^7.1",
-		"nette/application": "^2.4 || ~3.0.0",
-		"nette/forms": "^2.4 || ~3.0.0",
-		"nette/utils": "^2.4 || ~3.0.0"
+		"nette/application": "^2.4 || ^3.0.0",
+		"nette/forms": "^2.4 || ^3.0.0",
+		"nette/utils": "^2.4 || ^3.0.0"
 	},
 	"require-dev": {
 		"nette/di": "^2.4.6 || ^3.0.0",
