--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	"require": {
 		"php": ">=7.1",
 		"nette/application": "^2.4 || ^3.0.0",
-		"nette/forms": "^2.4 || ^3.0.0",
+		"nette/forms": "^3.1.0",
 		"nette/utils": "^2.4 || ^3.0.0"
 	},
 	"require-dev": {
