--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
 		"php": ">=7.1",
 		"nette/application": "^2.4 || ^3.0.0",
 		"nette/forms": "^3.1.0",
-		"nette/utils": "^2.4 || ^3.0.0"
+		"nette/utils": "^2.4 || ^3.0.0 || ^4.0.0"
 	},
 	"require-dev": {
 		"nette/di": "^2.4.6 || ^3.0.0",
-		"nette/robot-loader": "^2.4 || ^3.0.0",
+		"nette/robot-loader": "^2.4 || ^3.0.0 || ^4.0.0",
 		"nette/bootstrap": "^2.4 || ^3.0.0",
 		"nette/http": "^2.4 || ^3.0.0",
 		"tracy/tracy": "^2.4 || ^3.0.0",
